* Added user domain and persisted user and token mappings * Added test call to retrieve data from facebook via the mapped token

--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -12,6 +12,7 @@ facebook:
     clientSecret: 33b17e044ee6a4fa383f46ec6e28ea1d
     accessTokenUri: https://graph.facebook.com/oauth/access_token
     userAuthorizationUri: https://www.facebook.com/dialog/oauth
+    scope: public_profile,email
     tokenName: oauth_token
     authenticationScheme: query
     clientAuthenticationScheme: form
@@ -35,3 +36,17 @@ spring:
   resources:
     chain:
       enabled: true
+  datasource:
+    url: jdbc:mysql://localhost:3306/oauthServerExample?useUnicode=true&characterEncoding=utf8&createDatabaseIfNotExist=true
+    username: root
+    password: root
+    testWhileIdle: true
+    validationQuery: SELECT 1
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+      naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
